<resources>
    <string name="app_name">TrailExperience</string>
    <string name="title_activity_authentication">Trail Experience</string>
    <string name="authentication_greeting">Explore new ways!</string>
    <string name="no_data">No Data</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="logout">Logout</string>
    <string name="title_activity_tours">Tours</string>
    <string name="login_button">Login</string>
    <string name="image_of_the_tour">Image of the tour</string>
    <string name="permission_denied_explanation">Permission request has been denied.</string>
    <string name="drag_handle">Drag handle</string>
    <string name="logo_book">Logo book</string>
    <string name="logo_mountains">logo mountains</string>
    <string name="title_tour_detail_fragment">Details</string>
    <string name="title_maps_fragment">Map</string>
    <string name="title_tours_list_fragment">Trail Experience</string>
    <string name="show_map">show map</string>
    <string name="mountainbike">Mountainbike</string>
    <string name="hike">Hike</string>
    <string name="name_hint">Name</string>
    <string name="description_hint">description</string>
    <string name="difficulty_easy">easy</string>
    <string name="difficulty_medium">medium</string>
    <string name="difficulty_hard">hard</string>
    <string name="select_location">Location</string>
    <string name="title_tour_add_fragment">Add a Tour</string>
    <string name="image_hint">https://www.myImage.com/myImage.png</string>
    <string name="location_format">%.6f / %.6f</string>
    <string name="enter_missing_details">please enter all fields</string>
    <string name="map_fab">open map view</string>
    <string name="save_location_fab_text">save location</string>
    <string name="title_select_location_fragment">Select a location</string>
    <string name="select_location_err">please select a location</string>
    <string name="hoehenmeter">Höhenmeter</string>
    <string name="kilometer">Kilometer</string>
    <string name="km_format">%d km</string>
    <string name="hm_format">%d hm</string>
    <string name="climb">Climbing</string>
    <string name="hiking">hiking</string>
    <string name="climbing">climbing</string>
    <string name="mountainbiking">mountainbiking</string>
    <string name="difficulty_easy_text">Easy</string>
    <string name="difficulty_medium_text">Intermediate</string>
    <string name="difficulty_hard_text">Advanced</string>
</resources>