<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/layout_description"
        app:motionDebug="SHOW_PATH">

        <ImageView
            android:id="@+id/mountain_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_authentication_height"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_mountains_200"
            android:contentDescription="@string/logo_mountains" />

        <TextView
            android:id="@+id/greeting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authentication_greeting"
            android:textColor="@color/main_dark_blue"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mountain_image"
            app:layout_constraintVertical_bias="0.25" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/dragHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_drag_handle_24"
            android:contentDescription="@string/drag_handle" />

        <ImageView
            android:id="@+id/logo_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greeting_text"
            app:srcCompat="@drawable/ic_book_200"
            android:contentDescription="@string/logo_book" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>