<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.trailexperience.tours.add.ToursAddViewModel" />

        <variable
            name="tour"
            type="com.example.android.trailexperience.tours.data.objects.TourItem" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="@dimen/image_size_small"
                android:layout_height="@dimen/image_size_small"
                android:layout_marginTop="@dimen/margin_25"
                android:contentDescription="@string/image_of_the_tour"
                android:imageUrl="@{tour.image}"
                app:civ_border_color="@color/colorPrimaryDark"
                app:civ_border_width="@dimen/border_width"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_25"
                android:layout_marginEnd="@dimen/margin_50"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:text="@={tour.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image" />

            <EditText
                android:id="@+id/edit_text_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_50"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:text="@={tour.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />

            <EditText
                android:id="@+id/edit_text_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_50"
                android:ems="10"
                android:hint="@string/image_hint"
                android:inputType="text"
                android:text="@={tour.image}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_description"/>

            <EditText
                android:id="@+id/edit_text_hm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_50"
                android:drawableStart="@drawable/ic_baseline_height_24"
                android:ems="10"
                android:inputType="number"
                android:tourHm="@={tour.hm}"
                app:layout_constraintEnd_toStartOf="@+id/edit_text_km"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_image" />

            <EditText
                android:id="@+id/edit_text_km"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_50"
                android:drawableStart="@drawable/routen"
                android:ems="10"
                android:inputType="number"
                android:tourKm="@={tour.km}"
                app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_hm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/edit_text_hm" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipgroup_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_25"
                android:layout_marginEnd="@dimen/margin_50"
                android:tourType="@{tour.type}"
                app:chipSpacingHorizontal="@dimen/margin_25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_hm"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_hike"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hike" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_mtb"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mountainbike" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_climb"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/climb" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_25"
                android:layout_marginEnd="@dimen/margin_50"
                android:tourDifficulty="@{tour.difficulty}"
                app:chipSpacingHorizontal="@dimen/margin_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipgroup_type"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_easy"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty_easy" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_medium"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty_medium" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_hard"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty_hard" />
            </com.google.android.material.chip.ChipGroup>

            <Button
                android:id="@+id/select_location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_25"
                android:drawableStart="@drawable/ic_map_24"
                android:text="@string/select_location"
                app:layout_constraintEnd_toStartOf="@+id/location_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_50"
                android:location="@{tour}"
                app:layout_constraintBaseline_toBaselineOf="@+id/select_location_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/select_location_button"
                tools:text="47.2492, 10.47267" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/save_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_save_24"
                android:focusable="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>