<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.trailexperience.tours.tourslist.ToursListViewModel" />
        <variable
            name="tour"
            type="com.example.android.trailexperience.tours.data.objects.TourItem" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.trailexperience.tours.tourslist.ToursListFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipgroup_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_50"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/margin_50"
                android:tourType="@{tour.type}"
                app:chipSpacingHorizontal="@dimen/margin_25"
                app:selectionRequired="false"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_hike"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hike" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_mtb"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mountainbike" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_climb"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/climb" />

            </com.google.android.material.chip.ChipGroup>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/toursListRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:liveData="@{viewModel.filteredToursList}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/noDataTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fadeVisible="@{viewModel.showNoData.booleanValue()}"
                    android:gravity="center"
                    android:text="@string/no_data"
                    android:textSize="@dimen/text_size_large"
                    app:drawableTopCompat="@drawable/ic_cloud_off_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fadeVisible="@{viewModel.showLoading.booleanValue()}"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/menu_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:contentDescription="@string/show_map"
                    app:fabSize="normal"
                    app:layout_anchor="@id/toursListRecyclerView"
                    app:layout_anchorGravity="bottom|right|end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_baseline_menu_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/map_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_fab_mini"
                    android:layout_marginBottom="@dimen/margin_fab_mini"
                    android:clickable="true"
                    android:contentDescription="@string/map_fab"
                    android:visibility="gone"
                    app:backgroundTint="@color/main_dark_blue"
                    app:fabSize="mini"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_baseline_map_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_fab_mini"
                    android:layout_marginBottom="@dimen/margin_fab_mini"
                    android:clickable="true"
                    android:visibility="gone"
                    app:backgroundTint="@color/main_dark_blue"
                    app:fabSize="mini"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_baseline_add_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>